bynkc/tests/fixtures/positive/343_option_http_question_lift/input.bynk
commons demo.optlift

-- `Option[T]?` lifts into a handler returning HttpResult: `Some(v)` yields `v`,
-- `None` early-returns `NotFound` (404). This collapses the outer half of the
-- KV-read -> decode -> respond match pyramid.

fn lookup(id: Int) -> Option[String] {
  if id > 0 {
    Some("found")
  } else {
    None
  }
}

fn handler(id: Int) -> HttpResult[String] {
  let name = lookup(id)?
  Ok(name)
}

fn asyncHandler(id: Int) -> Effect[HttpResult[String]] {
  let name = lookup(id)?
  Effect.pure(Ok(name))
}
