bynkc/tests/fixtures/negative/352_option_question_outside_http/input.bynk
commons demo.optnohttp
fn lookup(id: Int) -> Option[Int] { Some(id) }
fn bad(id: Int) -> Result[Int, String] {
  let x = lookup(id)?
  Ok(x)
}
